# prolab_ros2

./: .gitignore  README.md
docker/: Dockerfile  README-nvidia-container-toolkit.md  docker-compose.yaml
graphs/: draw_blind_spot.py  draw_path.py  err_time.py  plots.py
ros2_ws/: .bash_aliases  paths.csv  paths_kidnapped.csv  paths_ture_comparison.csv  rms_errors.txt  rms_errors_kidnapped.txt  rms_errors_normal.txt
ros2_ws/install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
ros2_ws/install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.sh  package.sh
ros2_ws/install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
ros2_ws/install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: local_setup.sh  package.sh
ros2_ws/install/examples_rclcpp_minimal_action_client/lib/examples_rclcpp_minimal_action_client/: action_client_member_functions  action_client_not_composable  action_client_not_composable_with_cancel  action_client_not_composable_with_feedback
ros2_ws/install/examples_rclcpp_minimal_action_client/share/examples_rclcpp_minimal_action_client/: local_setup.sh
ros2_ws/install/examples_rclcpp_minimal_action_server/lib/examples_rclcpp_minimal_action_server/: action_server_member_functions  action_server_not_composable
ros2_ws/install/examples_rclcpp_minimal_client/lib/examples_rclcpp_minimal_client/: client_main
ros2_ws/install/examples_rclcpp_minimal_client/share/examples_rclcpp_minimal_client/: local_setup.sh
ros2_ws/install/examples_rclcpp_minimal_composition/lib/examples_rclcpp_minimal_composition/: composition_composed  composition_publisher  composition_subscriber
ros2_ws/install/examples_rclcpp_minimal_composition/share/examples_rclcpp_minimal_composition/: local_setup.sh
ros2_ws/install/examples_rclcpp_minimal_publisher/lib/examples_rclcpp_minimal_publisher/: publisher_lambda  publisher_member_function  publisher_member_function_with_type_adapter  publisher_member_function_with_unique_network_flow_endpoints  publisher_not_composable  publisher_wait_for_all_acked
ros2_ws/install/examples_rclcpp_minimal_service/lib/examples_rclcpp_minimal_service/: service_main
ros2_ws/install/examples_rclcpp_minimal_subscriber/lib/examples_rclcpp_minimal_subscriber/: static_wait_set_subscriber  subscriber_content_filtering  subscriber_lambda  subscriber_member_function  subscriber_member_function_with_topic_statistics  subscriber_member_function_with_type_adapter  subscriber_member_function_with_unique_network_flow_endpoints  subscriber_not_composable  time_triggered_wait_set_subscriber  wait_set_subscriber
ros2_ws/install/examples_rclcpp_minimal_subscriber/share/examples_rclcpp_minimal_subscriber/: local_setup.sh  package.sh
ros2_ws/install/examples_rclcpp_minimal_timer/lib/examples_rclcpp_minimal_timer/: timer_lambda  timer_member_function
ros2_ws/install/examples_rclcpp_minimal_timer/share/examples_rclcpp_minimal_timer/: local_setup.sh
ros2_ws/install/examples_rclcpp_multithreaded_executor/lib/examples_rclcpp_multithreaded_executor/: multithreaded_executor
ros2_ws/install/examples_rclcpp_multithreaded_executor/share/examples_rclcpp_multithreaded_executor/: local_setup.sh
ros2_ws/install/examples_rclcpp_wait_set/lib/examples_rclcpp_wait_set/: executor_random_order  static_wait_set  thread_safe_wait_set  wait_set  wait_set_composed  wait_set_listener  wait_set_random_order  wait_set_talker  wait_set_topics_and_timer  wait_set_topics_with_different_rates
ros2_ws/log/: latest_build
ros2_ws/src/my_robot_bringup/: CMakeLists.txt
ros2_ws/src/my_robot_bringup/launch/: gazebo.launch.py  map.server.launch.py  slam_mapping_launch.py  test.launch.py
ros2_ws/src/my_robot_bringup/maps/: playground_map.pgm  playground_map.yaml
ros2_ws/src/my_robot_bringup/scripts/: KF.py
ros2_ws/src/my_robot_bringup/worlds/: empty.world
ros2_ws/src/turtlebot3_full_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/turtlebot3_full_bringup/assets/: model.sdf
ros2_ws/src/turtlebot3_full_bringup/launch/: full_bringup.launch.py
ros2_ws/src/turtlebot3_full_bringup/maps/: playground_map_edited.pgm
ros2_ws/src/turtlebot3_full_bringup/rviz/: rviz.rviz
ros2_ws/src/turtlebot3_full_bringup/scripts/: extended_kalman_filter.cpp  extended_kalman_filter.h  goals.yaml  ground_truth.cpp  kalman_filter.cpp  kalman_filter.h  nav2_goals.cpp  particle_filter.cpp  pose_evaluator_node.cpp
ros2_ws/src/turtlebot3_full_bringup/worlds/: playground.world
(+19 files in other folders)
